--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "formulario",
   "private": true,
-  "homepage": "https://magrogabriel/github.io/form-destinos/"
+  "homepage": "https://magrogabriel/github.io/form-destinos/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
